# fincli

./: Cargo.toml
src/: lib.rs  main.rs
src/domain/: cli.rs  transaction.rs
